...
        return 'Geçersiz e-posta adresi';
      case AuthConstants.userDisabled:
        return 'Bu hesap devre dışı bırakılmış';
      case AuthConstants.tooManyRequests:
        return 'Çok fazla başarısız giriş denemesi. Lütfen daha sonra tekrar deneyin';
      case AuthConstants.networkRequestFailed:
        return 'İnternet bağlantınızı kontrol edin';
      case AuthConstants.invalidCredential:
        return 'Geçersiz kimlik bilgileri';
      case AuthConstants.emailAlreadyInUse:
        return 'Bu e-posta adresi zaten kullanımda';
      case AuthConstants.weakPassword:
        return 'Şifre çok zayıf. Daha güçlü bir şifre seçin';
...
